--- a/F_Energy.ipynb
+++ b/F_Energy.ipynb
@@ -2401,35 +2401,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "40428a8b-0331-437a-b470-8e12a64d82cc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "stressor\n",
-       "Nature Inputs: Electricity by hydro                                                                                       0.000000\n",
-       "Nature Inputs: Electricity by wind                                                                                        0.000000\n",
-       "Nature Inputs: Energy inputs to cultiavted biomass                                                                        0.000000\n",
-       "Emission Relevant Energy Carrier Aviation Gasoline                                                                        0.000000\n",
-       "Emission Relevant Energy Carrier Biodiesels                                                                              10.929398\n",
-       "                                                                                                                           ...    \n",
-       "Energy Carrier Net LOSS Sugar                                                                                            23.563548\n",
-       "Energy Carrier Net LOSS Textiles waste for treatment: incineration                                                      162.225962\n",
-       "Energy Carrier Net LOSS White Spirit & SBP                                                                                0.000000\n",
-       "Energy Carrier Net LOSS Wood material for treatment, Re-processing of secondary wood material into new wood material     23.563548\n",
-       "Energy Carrier Net LOSS Wood waste for treatment: incineration                                                          178.539187\n",
-       "Name: Steam and hot water supply services, Length: 291, dtype: float64"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'unit_F' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m All_unique_unit \u001b[38;5;241m=\u001b[39m \u001b[43munit_F\u001b[49m\u001b[38;5;241m.\u001b[39mloc[:,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124munit\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[0;32m      2\u001b[0m All_unique_unit\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'unit_F' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_F_NOR_Energy.loc[:, 'Steam and hot water supply services']"
+    "All_unique_unit = unit_F.loc[:,'unit'].unique()\n",
+    "All_unique_unit\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afc4c361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kp_stressor = unit_F.loc[unit_F.iloc[:,0] == '1000 p'] # Employment numbers in 1000 p\n",
+    "Kp_stressor\n",
+    "\n",
+    "Mhr_stressor = unit_F.loc[unit_F.iloc[:,0] == 'M.hr'] # Employment hours \n",
+    "Mhr_stressor\n",
+    "\n",
+    "TJ_stressor = unit_F[unit_F.iloc[:, 0] == 'TJ']\n",
+    "TJ_stressor\n",
+    "\n",
+    "kg_stressor = unit_F[unit_F.iloc[:, 0] == 'kg']\n",
+    "kg_stressor\n"
    ]
   }
  ],
@@ -2449,7 +2460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
