--- a/F_Energy.ipynb
+++ b/F_Energy.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "c148a47c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import packages\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib as plt"
+    "import numpy as np"
    ]
   },
   {
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "43eda3ef",
    "metadata": {},
    "outputs": [],
@@ -881,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ed72196c",
    "metadata": {},
    "outputs": [],
@@ -895,8 +894,7 @@
     "#df_F = pd.read_csv(r\"Data/F.txt\", sep='\\t', header=[0,1], index_col=[0,1]) #NB Oppdater Basecode !!!\n",
     "df_F = pd.read_csv(r\"Data/F.txt\", sep='\\t', header=[0,1], index_col=[0])\n",
     "\n",
-    "\n",
-    "unit_F = pd.read_csv(r\"Data/unit_F.txt\", sep='\\t', header=0, index_col=[0,1])\n",
+    "unit_F = pd.read_csv(r\"Data/unit_F.txt\", sep='\\t', header=0, index_col=0)\n",
     "unit_Z = pd.read_csv(r\"Data/unit_Z.txt\", sep='\\t', header=0, index_col=[0,1])"
    ]
   },
@@ -1576,6 +1574,42 @@
     "# Checking if there are rows with only 0 values, after random controll of index\n",
     "Test_zero = np.array(df_F_NOR.loc[\"Energy Carrier Net LOSS Wood waste for treatment: incineration\"])\n",
     "Test_zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "565f4ed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['M.EUR', '1000 p', 'M.hr', 'kg', 'kg CO2-eq', 'km2', 'TJ', 'kt',\n",
+       "       'Mm3'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "All_unique_unit = unit_F.loc[:, 'unit'].unique()\n",
+    "All_unique_unit\n",
+    "\n",
+    "#Kp_stressor = unit_F.loc[unit_F.iloc[:,0] == '1000 p'] # Employment numbers in 1000 p\n",
+    "#Kp_stressor\n",
+    "\n",
+    "#Mhr_stressor = unit_F.loc[unit_F.iloc[:,0] == 'M.hr'] # Employment hours \n",
+    "#Mhr_stressor\n",
+    "\n",
+    "#TJ_stressor = unit_F[unit_F.iloc[:, 0] == 'TJ'] # Terrajoule\n",
+    "#TJ_stressor\n",
+    "\n",
+    "#kg_stressor = unit_F[unit_F.iloc[:, 0] == 'kg']\n",
+    "#kg_stressor"
    ]
   },
   {
@@ -2460,7 +2494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
